# pytorrent-desktop

./: .gitattributes  .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml  pytorrent-desktop.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  BUILD.en.md  BUILD.md  DECISIONS.en.md  DECISIONS.md  DESIGN.en.md  DESIGN.md  PROCESS.en.md  PROCESS.md  ROADMAP.en.md  ROADMAP.md  SCOPE.en.md  SCOPE.md  UX-SPEC.en.md  UX-SPEC.md
src/pytorrent_desktop/: __init__.py  __main__.py
src/pytorrent_desktop/core/: __init__.py  config.py  engine.py  errors.py  resume_store.py  system_actions.py
src/pytorrent_desktop/core/search/: __init__.py  base.py  btdig.py
src/pytorrent_desktop/ui/: __init__.py  dialogs.py  main_window.py  models.py  styles.qss
tests/: conftest.py  test_config.py  test_dialogs.py  test_engine.py  test_main_window.py  test_models.py  test_resume_store.py  test_search_base.py  test_search_btdig.py  test_system_actions.py
tests/fixtures/: btdig_malformed_row.html  btdig_no_results.html  btdig_results.html  btdig_results_real.html
